<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WalletFluent</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="login">logIn</string>
    <string name="currency">Currencies</string>
    <string name="language">ენა/Language</string>
    <string name="crypto">Crypto</string>
    <string name="walletfluent" translatable="false">Walletfluent</string>
    <string name="enter">შესვლა</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="register">რეგისტრაცია</string>
    <string name="PersonalInformation">პერსონალური მონაცემები</string>
    <string name="username">Username</string>
    <string name="invalidField">This field should not be left empty</string>
    <string name="signin">Sign in</string>
    <string name="sign_in"><u>Sign in</u></string>
    <string name="sign_up" translatable="false"><u>Sign up</u></string>
    <string name="signup" translatable="false">Sign up</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="create_account" translatable="false">Create\nAccount</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="balance">Current Balance</string>
    <string name="welcome">welcome</string>
    <string name="english" translatable="false">English</string>
    <string name="georgian" translatable="false">Georgian</string>
    <string name="application_language" translatable="false">Application Language</string>
    <string name="buy">Buy </string>
    <string name="sell">Sell  </string>
    <string name="InvalidRegistration">Sorry, Invalid Email or password</string>
    <string name="NotValidInformation">Sorry, Data you have entered is invalid</string>
    <string name="VerificationDialog">Please, Verify your account using your email</string>
    <string name="ResetPasswordDialog">Please follow instructions on your Email</string>
    <string name="ResetPasswordUsingEmailDialog">Please specify correct email</string>
    <string name="DollarSign" translatable="false">$</string>
    <string name="MarketCapRank" translatable="false">Market cap rank #</string>
    <string name="AmountExceed" translatable="false">The amount you enter exceeds the current balance</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="welcome_user" translatable="false">Welcome User</string>
    <string name="change_password" translatable="false">Edit Password</string>
    <string name="transactions" translatable="false">Transactions</string>
    <string name="switch_mode" translatable="false">Switch Mode</string>
    <string name="enter_purpose" translatable="false">Enter Description</string>
    <string name="add_item" translatable="false">Add History</string>
    <string name="email">Email</string>
    <string name="account_info" translatable="false">Account Info</string>
    <string name="date" translatable="false">Account Created</string>
    <string name="UserBalance" translatable="false">Balance</string>
    <string name="NoInternetConnection" translatable="false">In order to get latest updates, you should be connected to internet</string>
    <string name="SwitchToDark" translatable="false">Switch To Dark</string>
    <string name="SwitchToLight" translatable="false">Switch To Light</string>
    <string name="CheckConnection" translatable="false">In Order to use application, you should be connected to internet</string>
    <string name="InternetRequired" translatable="false">Internet Connection Required!</string>
    <string name="enter_amount" translatable="false">Enter Amount</string>
    <string name="_2022" translatable="false">**** **** **** 2022</string>
    <string name="_00_00" translatable="false">00.00 ₾</string>
    <string name="current_balance" translatable="false">Current Balance</string>
    <string name="userCurrentBalance" translatable="false">00.00₾</string>
    <string name="add_expense" translatable="false">Add Expense</string>
    <string name="add_income" translatable="false">Add Income</string>


    <string-array name="countries">
        <item >GEL</item>
        <item >USD</item>
        <item >EUR</item>
        <item >AED</item>
        <item >AMD</item>
        <item >AVD</item>
        <item >AZN</item>
        <item >BGN</item>
        <item >CAD</item>
        <item >CHF</item>
        <item >CNY</item>
        <item >CZK</item>
        <item >DKK</item>
        <item >GBP</item>
        <item >ILS</item>
        <item >JPY</item>
        <item >NOK</item>
        <item >PLN</item>
        <item >QAR</item>
        <item >SAR</item>
        <item >SEK</item>
        <item >TRY</item>
        <item >UKG</item>
    </string-array>

</resources>