<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/HomeFragment"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />
        <item
            android:id="@+id/currencyFragment"
            android:icon="@drawable/ic_currency"
            android:title="@string/currency" />
        <item
            android:id="@+id/cryptoFragment"
            android:icon="@drawable/ic_crypto"
            android:title="@string/crypto" />
        <item
            android:id="@+id/languageFragment"
            android:icon="@drawable/ic_language"
            android:title="@string/language" />

    </group>
</menu>