<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/languageFragment"
        android:name="ge.nlatsabidze.walletfluent.ui.language.LanguageFragment"
        android:label="@string/language"
        tools:layout="@layout/fragment_language" />

    <fragment
        android:id="@+id/cryptoFragment"
        android:name="ge.nlatsabidze.walletfluent.ui.crypto.CryptoFragment"
        android:label="@string/crypto"
        tools:layout="@layout/fragment_crypto" />

    <fragment
        android:id="@+id/currencyFragment"
        android:name="ge.nlatsabidze.walletfluent.ui.currency.CurrencyFragment"
        android:label="@string/currency"
        tools:layout="@layout/fragment_currency" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="ge.nlatsabidze.walletfluent.ui.entry.LoginFragment"
        android:label="@string/enter"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_personalInfoFragment"
            app:destination="@id/personalInfoFragment" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <argument
            android:name="email"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="email" />
        <argument
            android:name="password"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="password" />


    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="ge.nlatsabidze.walletfluent.ui.entry.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:popUpTo="@id/loginFragment" />
        <action
            android:id="@+id/action_registerFragment_to_loginFragment2"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/personalInfoFragment"
        android:name="ge.nlatsabidze.walletfluent.ui.personalInfo.PersonalInfoFragment"
        android:label="@string/PersonalInformation"
        tools:layout="@layout/personal_info_fragment" />

</navigation>