<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.language.LanguageFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/application_language"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintTop_toBottomOf="@+id/tvLanguage">

        <RadioButton
            android:id="@+id/rbGeorgian"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/georgian" />

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/english" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>