<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.personalInfo.decreaseAmount.DecreaseAmountFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/beauty"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/current_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/userCurrentBalance"
            android:textSize="40sp"
            app:fontFamily="@font/beauty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBalance"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEnterAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="@font/beauty"
            android:gravity="center"
            android:hint="@string/enter_amount"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentBalance" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPurpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="@font/beauty"
            android:gravity="center"
            android:hint="@string/enter_purpose"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEnterAmount" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIncreaseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/beauty"
            android:text="@string/add_item"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPurpose" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
